k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  labels:
    app: app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:    
        app: app-backend
    spec:
      containers:
      - name: app-backend
        image: 891377325592.dkr.ecr.us-east-1.amazonaws.com/react-node-app/backend:1.0
        ports:
        - containerPort: 3200
      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
