k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
  labels:
    app: app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
      - name: app-frontend
        image: 891377325592.dkr.ecr.us-east-1.amazonaws.com/react-node-app/frontend:1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend-service
spec:
  selector:
    app: app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
